--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Primary Meta Tags -->
-  <title>Ethereal  Platform | Earn Online Easily | Stream, Review & Refer to Earn</title>
+  <title>Ethereal  Platform | Earn Online Easily | Review & Refer to Earn</title>
   <link rel="canonical" href="https://etherealwebsite.com/index.html">
   <meta name="description" content="Register on Ethereal  Platform and start earning money online by streaming, reviewing, and referring. One-time registration fee to unlocks all opportunities.">
   <meta name="keywords" content="Ethereal  registration, earn online, streaming jobs, smartphone jobs, Ethereal  withdrawal, referrals, reviews">
@@ -23,7 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="Ethereal  Platform | Register & Start Earning">
   <meta property="og:description" content="Join Ethereal  today for online earnings via streaming, reviewing, and referrals. registration includes full access.">
-  <meta property="og:image" content="https://etherealwebsite.com/Ethereal--N-coin-seven.jpg">
+  <meta property="og:image" content="https://etherealwebsite.com/ETHEREAL-SIGNUP-DATA-REWARD.jpg">
   <meta property="og:url" content="https://etherealwebsite.com">
   <meta property="og:type" content="website">
 
@@ -31,7 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Ethereal  Platform | Register & Earn Online">
   <meta name="twitter:description" content="Ethereal  lets you earn by streaming music, watching videos, writing reviews, and referrals. Register now .">
-  <meta name="twitter:image" content="https://etherealwebsite.com/Ethereal-logo.png">
+  <meta name="twitter:image" content="https://etherealwebsite.com/ETHEREAL-SIGNUP-DATA-REWARD.jpg">
 
   <!-- Preload & Fonts -->
   <link rel="preload" href="style.css" as="style">
