--- a/Review.html
+++ b/Review.html
@@ -367,7 +367,7 @@
   <h2>◽ETHEREAL - X PLAN ( N14,000)</h2>
   <p>✔ Daily Earnings & Flash Claim Rewards are Claimed automatically by personal AI allocated to you.</p>
   
-  <a href="https://linktr.ee/EtherealWebsite.Com" target="_blank">
+  <a href="Review.html" target="_blank">
     <button>IF YOU ARE NOT FROM NIGERIA CLICK HERE TO REGISTER</button> <!-- Open Register Modal -->
 </a>
   </div>
