--- a/Review.html
+++ b/Review.html
@@ -253,7 +253,7 @@
   </ul>
   <p>🔹 6-Month Membership Access – Your account stays active for half a year, and you can renew after that.</p>
 
-  <a href="home.html" target="_blank">
+  <a href="https://wa.me/2348157823869?text=I%20chosed%20%standard%20package%20what%20next%20" target="_blank">
     <button>START (STANDARD PLAN)</button>
   </a>
 </div>
@@ -338,7 +338,7 @@
       <li>• Start earning DAILY</li>
       <li>• Get added to the VIP success group</li>
     </ul>
-    <a href="home.html" target="_blank">
+    <a href="https://wa.me/2348157823869?text=I%20chosed%20%extra%20package%20what%20next%20" target="_blank">
       <button>START EARNING(EXTRA PACKAGE)</button> <!-- Open Register Modal -->
     </a>         
 </div>
