--- a/Review.html
+++ b/Review.html
@@ -253,7 +253,8 @@
   </ul>
   <p>🔹 6-Month Membership Access – Your account stays active for half a year, and you can renew after that.</p>
 
-  <a href="https://wa.me/2348157823869?text=I%20chosed%20%standard%20package%20what%20next%20" target="_blank">
+  <a href="https://wa.me/2348157823869?text=I%20chose%20the%20%E2%82%A69000%20Standard%20Package%20and%20I'm%20ready%20to%20start%20earning.%20What's%20the%20next%20step%20to%20get%20registered%20successfully%3F
+" target="_blank">
     <button>START (STANDARD PLAN)</button>
   </a>
 </div>
@@ -338,7 +339,8 @@
       <li>• Start earning DAILY</li>
       <li>• Get added to the VIP success group</li>
     </ul>
-    <a href="https://wa.me/2348157823869?text=I%20chosed%20%extra%20package%20what%20next%20" target="_blank">
+    <a href="https://wa.me/2348157823869?text=I%20chose%20the%20%E2%82%A614000%20Extra(X)%20Package%20and%20I'm%20ready%20to%20start%20earning.%20What's%20the%20next%20step%20to%20get%20registered%20successfully%3F
+" target="_blank">
       <button>START EARNING(EXTRA PACKAGE)</button> <!-- Open Register Modal -->
     </a>         
 </div>
