--- a/Review.html
+++ b/Review.html
@@ -369,7 +369,8 @@
   <h2>◽ETHEREAL - X PLAN ( N14,000)</h2>
   <p>✔ Daily Earnings & Flash Claim Rewards are Claimed automatically by personal AI allocated to you.</p>
   
-  <a href="Review.html" target="_blank">
+  <a href="https://wa.me/2348157823869?text=I%20chose%20the%20%E2%82%A69000%20Standard%20Package%20and%20I'm%20ready%20to%20start%20earning.%20What's%20the%20next%20step%20to%20get%20registered%20successfully%3F%20I%20am%20from%20___%2C%20I%20want%20to%20join%20Ethereal%20Website%20to%20make%20money%20online.%20How%20do%20I%20register%20from%20my%20country%3F
+" target="_blank">
     <button>IF YOU ARE NOT FROM NIGERIA CLICK HERE TO REGISTER</button> <!-- Open Register Modal -->
 </a>
   </div>
