--- a/index.html
+++ b/index.html
@@ -41,6 +41,105 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="ethereal-short-cut-logo.png" type="image/png">
 
+      <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Register on Ethereal Platform | Ethereal App | How to Sign Up and Earn on Ethereal Website",
+  "url": "https://etherealwebsite.com/Ethereal_registration1",
+  "description": "Register on the Ethereal Platform and start earning by reading posts, playing games like Candy Crush, sending Snapchat streaks, and clicking links. No referrals needed.",
+  "keywords": [
+    "Etherealweb.site",
+    "Ethereal Platform",
+    "Ethereal App",
+    "Ethereal Website",
+    "How to register on Ethereal",
+    "Is Ethereal legit?",
+    "Ethereal Website Link",
+    "Ethereal registration link",
+    "Ethereal Platform review",
+    "How to earn from Ethereal",
+    "Ethereal app download",
+    "Ethereal sign-up process",
+    "Ethereal Platform Nigeria",
+    "Daily tasks to earn money online"
+  ],
+  "publisher": {
+    "@type": "Organization",
+    "name": "Ethereal Platform",
+    "url": "https://etherealwebsite.com",
+    "logo": "https://etherealwebsite.com/Ethereal-logo.png",
+    "description": "Ethereal is a digital earning platform where users make money online by doing daily tasks like reading posts, playing games, and sharing links.",
+    "sameAs": [
+      "https://etherealwebsite.com",
+      "https://linktr.ee/Ethereal_registration",
+      "https://facebook.com/EtherealPlatform",
+      "https://twitter.com/EtherealWebApp"
+    ]
+  },
+  "potentialAction": {
+    "@type": "Action",
+    "name": "Register on Ethereal Platform",
+    "url": "https://linktr.ee/Ethereal_registration"
+  },
+  "mainEntity": {
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is Ethereal Platform?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Ethereal rewards you for simple daily activities — like reading posts, playing games (e.g., Candy Crush), sending Snapchat streaks, and clicking links."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How much is the registration fee?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The registration fee is 14,000 or 9,000 depending on your selected package. It gives you access to all earning opportunities on the platform."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How can I earn on Ethereal Platform?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You earn by completing simple tasks like reading posts, playing games like Candy Crush, sending Snapchat streaks, and clicking links."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need referrals to earn?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No, referrals are not required to earn. However, referring others helps increase your earnings."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I withdraw my earnings from Ethereal?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You can withdraw directly to your bank account once you meet the minimum withdrawal requirement."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is Ethereal an app?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Ethereal functions as both a web-based platform and a mobile-friendly app-like interface. You can register and start earning online through the Ethereal website."
+        }
+      }
+    ]
+  }
+}
+</script>
+
+
+   
   <!-- Structured Data: Website, Organization, Breadcrumbs, Product/Offer, FAQ -->
   <script type="application/ld+json">
   {
