--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   }
   </script>
 
-  <script type="application/ld+json">
+  <!--<script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "FAQPage",
@@ -215,7 +215,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       {"@type": "Question","name": "Is Ethereal  an app?","acceptedAnswer": {"@type": "Answer","text": "No, Ethereal  is a web platform accessible via browser."}}
     ]
   }
-  </script>
+  </script>-->
 
   <!-- Google Analytics (deferred) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SFNJZ2XVZ"></script>
